RESOLVED FIXED25367
wrong key code conversion in Gtk
https://bugs.webkit.org/show_bug.cgi?id=25367
Summary wrong key code conversion in Gtk
Fumitoshi Ukai
Reported 2009-04-24 09:50:39 PDT
in Gtk, WebKit converts some native key codes wrongly. For GDK_exclaim ('!'), no conversion so it would have keyIdentifier U+0000. For GDK_parenleft ('(') and GDK_parenright (')') will be converted into opposite key: should be '9' and '0', but is '0' and '9' respectively now.
Attachments
Fix wrong key code conversion. (2.51 KB, patch)
2009-04-24 09:54 PDT, Fumitoshi Ukai
no flags
Fix wrong key code conversion. (2.58 KB, patch)
2009-04-24 09:57 PDT, Fumitoshi Ukai
xan.lopez: review+
Fumitoshi Ukai
Comment 1 2009-04-24 09:54:17 PDT
Created attachment 29745 [details] Fix wrong key code conversion. WebCore/ChangeLog | 15 +++++++++++++++ WebCore/platform/chromium/KeyCodeConversionGtk.cpp | 5 +++-- WebCore/platform/gtk/KeyEventGtk.cpp | 5 +++-- 3 files changed, 21 insertions(+), 4 deletions(-)
Fumitoshi Ukai
Comment 2 2009-04-24 09:57:25 PDT
Created attachment 29746 [details] Fix wrong key code conversion. WebCore/ChangeLog | 16 ++++++++++++++++ WebCore/platform/chromium/KeyCodeConversionGtk.cpp | 5 +++-- WebCore/platform/gtk/KeyEventGtk.cpp | 5 +++-- 3 files changed, 22 insertions(+), 4 deletions(-)
Xan Lopez
Comment 3 2009-04-26 08:28:31 PDT
Comment on attachment 29746 [details] Fix wrong key code conversion. Looks good to me.
Jan Alonzo
Comment 4 2009-04-27 08:09:51 PDT
Landed in r42893
Note You need to log in before you can comment on or make changes to this bug.