2009-04-27  Fumitoshi Ukai  <ukai@google.com>

Reviewed by Xan Lopez.

        Fix wrong key code conversion.

        Missing conversion for GDK_exlaim ('!').
        Parens are opposite: GDK_parenleft is open paren '('
        and GDK_parenright is close paren ')'.
        https://bugs.webkit.org/show_bug.cgi?id=25367

        * platform/chromium/KeyCodeConversionGtk.cpp:
        (WebCore::windowsKeyCodeForKeyEvent):
        * platform/gtk/KeyEventGtk.cpp:
        (WebCore::windowsKeyCodeForKeyEvent):

Canonical link: https://commits.webkit.org/34943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42893 268f45cc-cd09-0410-ab3c-d52691b4dbfc